# DJI_SDK_OLDX

Lancelot北理云逸创新/: 新建 Microsoft Word 文档.docx
Lancelot北理云逸创新/Controller/OLD_X_FC_DJI/HARDWARE/IIC/: data_transfer.c  height_ctrl.c  hml5833l.h  include.h  led_fc.c
Lancelot北理云逸创新/Vision/DigitDetector/: CMakeLists.txt  mlp_params_hist_iter_12000.txt
Lancelot北理云逸创新/Vision/DigitDetector/src/: DigitDetector.cpp  DigitDetector_interface.cpp  DigitDetector_interface.h  TwoLayerNNFaster.h
Lancelot北理云逸创新/Vision/dsst/: CMakeLists.txt
Lancelot北理云逸创新/Vision/dsst/CorrelationTracker/: correlationtracker_export.h
Lancelot北理云逸创新/Vision/dsst/CorrelationTracker/dsst_tracker/: dsst_tracker.h
Lancelot北理云逸创新/Vision/src/: CharacterRecognition.cpp  CharacterRecognition.h  imageTrans.cpp  imageTrans.h  inifile.cpp  main.cpp  my_serial.cpp  my_serial.h
Lancelot北理云逸创新_back/Controller/OLD_X_FC_DJI/HARDWARE/IIC/: att_control.c  circle.h  gps.h  hml_sample.c  iic_soft.h  led_fc.h  ucos_task.c  usart_fc.h
Lancelot北理云逸创新_back/Controller/OLD_X_FC_DJI/USER/: UCOSII-3.uvguix.Administrator  UCOSII-3.uvguix_user.bak  UCOSII-3.uvoptx  UCOSII-3_UCOSII-3.dep  UCOSII-3_uvoptx.bak  main.c
Lancelot北理云逸创新_back/Vision/: CMakeLists.txt
Lancelot北理云逸创新_back/Vision/DigitDetector/: params_hist_iter_12000.txt
Lancelot北理云逸创新_back/Vision/DigitDetector/src/: DigitDetector.h  TwoLayerNNFaster.cpp  main.cpp  util.cpp  util.h
Lancelot北理云逸创新_back/Vision/dsst/CorrelationTracker/: CorrelationTracker.cpp  CorrelationTracker.h
Lancelot北理云逸创新_back/Vision/dsst/CorrelationTracker/dsst_tracker/: dsst_tracker.cpp
Lancelot北理云逸创新_back/Vision/src/: lancelot_functions.cpp  lancelot_functions.h  trace.h
M100/lib/inc/: DJI_API.h
M100/lib/src/: DJI_API.cpp  DJI_HardDriver.cpp
M100/sample/STM32/OnBoardSDK_STM32/Bsp/: BspUsart.cpp  BspUsart.h  timer.cpp
M100/sample/STM32/OnBoardSDK_STM32/Project/: OnBoardSDK_STM32.uvoptx  OnBoardSDK_STM32.uvprojx
M100/sample/STM32/OnBoardSDK_STM32/User/: LocalNavigation.cpp  Receive.cpp  cppforstm32.cpp  main.cpp  main.h
MEMS_1/SYSTEM/usart/: usart.c  usart.h
MEMS_1/USER/: USART.uvguix.Administrator  USART.uvoptx  USART.uvprojx  main.c
OLD_X_FC_DJI/HARDWARE/IIC/: alt_kf.c  att.h  att_control.c  beep.c  beep.h  circle.c  circle.h  data_transfer.c  fliter.c  gps.h  height_ctrl.c  height_ctrl.h  hml_sample.c  iic_fc.c  imu.c  include.h  led_fc.c  led_fc.h  m100.c  m100.h  mpu6050.c  mpu9250.c  mpu9250.h  ms5611_spi.c  ms5611_spi.h  parameter.c  pwm_inm.c  pwm_out.c  pwm_out.h  rc_mine.c  time.h  ucos_task.c  ucos_task.h  ultrasonic.c  usart_fc.c  usart_fc.h
OLD_X_FC_DJI/UCOSII/PORT/: os_cpu_a.asm
OLD_X_FC_DJI/USER/: UCOSII-3.uvguix.Administrator  UCOSII-3.uvoptx  UCOSII-3.uvprojx  main.c  stm32f4xx_it.c
Onboard-SDK-3.1/osdk-core/src/: DJI_API.cpp
Onboard-SDK-3.1/sample/STM32/OnBoardSDK_STM32/Project/: OnBoardSDK_STM32.uvoptx  OnBoardSDK_STM32.uvprojx
Onboard-SDK-3.1/sample/STM32/OnBoardSDK_STM32/User/: Receive.cpp  cppforstm32.cpp
Onboard-SDK-3.1_o/sample/STM32/OnBoardSDK_STM32/Bsp/: BspUsart.cpp
Onboard-SDK-3.1_o/sample/STM32/OnBoardSDK_STM32/User/: Activate.cpp
QRLand_CMake/: .cproject  .project  CMakeLists.txt  config.ini
QRLand_CMake/src/: ColorDetect.cpp  aruco.cpp  my_serial.cpp
ROS/oldx/: CMakeLists.txt
ROS/oldx/launch/: oldx_serial.launch
ROS/oldx/src/: oldx_serial.cpp  px4_info.cpp
ROS/qrland/: CMakeLists.txt  config.ini
ROS/qrland/src/: AttitudePosition.cpp  aruco.cpp
